{
  "version": 4,
  "terraform_version": "1.3.5",
  "serial": 436,
  "lineage": "634dc3ed-5f2b-4732-febe-86ce2fee4e27",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06a7b832c15b20946",
            "association_id": "eipassoc-059e22a2b3cff7976",
            "domain": "vpc",
            "id": "eipalloc-06a7b832c15b20946",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-08f9f2f99351a0bcd",
            "private_dns": "ip-10-0-101-210.ap-southeast-1.compute.internal",
            "private_ip": "10.0.101.210",
            "public_dns": "ec2-13-229-164-175.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.229.164.175",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "cropin-v2-ap-southeast-1a",
              "environment": "v2",
              "owners": "cropin"
            },
            "tags_all": {
              "Name": "cropin-v2-ap-southeast-1a",
              "environment": "v2",
              "owners": "cropin"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:464442795298:internet-gateway/igw-0e068148ed5b62a80",
            "id": "igw-0e068148ed5b62a80",
            "owner_id": "464442795298",
            "tags": {
              "Name": "cropin-v2",
              "environment": "v2",
              "owners": "cropin"
            },
            "tags_all": {
              "Name": "cropin-v2",
              "environment": "v2",
              "owners": "cropin"
            },
            "vpc_id": "vpc-0657ff5a9ff9cc17d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06a7b832c15b20946",
            "connectivity_type": "public",
            "id": "nat-01b8462950512fa1f",
            "network_interface_id": "eni-08f9f2f99351a0bcd",
            "private_ip": "10.0.101.210",
            "public_ip": "13.229.164.175",
            "subnet_id": "subnet-002c3bea0069b2b84",
            "tags": {
              "Name": "cropin-v2-ap-southeast-1a",
              "environment": "v2",
              "owners": "cropin"
            },
            "tags_all": {
              "Name": "cropin-v2-ap-southeast-1a",
              "environment": "v2",
              "owners": "cropin"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-07d356840e7700e781080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-01b8462950512fa1f",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07d356840e7700e78",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e068148ed5b62a80",
            "id": "r-rtb-01cc536d6641acfb01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01cc536d6641acfb0",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:464442795298:route-table/rtb-0a5f15c4cb50d2c2d",
            "id": "rtb-0a5f15c4cb50d2c2d",
            "owner_id": "464442795298",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "cropin-v2-db",
              "environment": "v2",
              "owners": "cropin"
            },
            "tags_all": {
              "Name": "cropin-v2-db",
              "environment": "v2",
              "owners": "cropin"
            },
            "timeouts": null,
            "vpc_id": "vpc-0657ff5a9ff9cc17d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:464442795298:route-table/rtb-07d356840e7700e78",
            "id": "rtb-07d356840e7700e78",
            "owner_id": "464442795298",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01b8462950512fa1f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cropin-v2-private",
              "environment": "v2",
              "owners": "cropin"
            },
            "tags_all": {
              "Name": "cropin-v2-private",
              "environment": "v2",
              "owners": "cropin"
            },
            "timeouts": null,
            "vpc_id": "vpc-0657ff5a9ff9cc17d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:464442795298:route-table/rtb-01cc536d6641acfb0",
            "id": "rtb-01cc536d6641acfb0",
            "owner_id": "464442795298",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e068148ed5b62a80",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cropin-v2-public",
              "environment": "v2",
              "owners": "cropin"
            },
            "tags_all": {
              "Name": "cropin-v2-public",
              "environment": "v2",
              "owners": "cropin"
            },
            "timeouts": null,
            "vpc_id": "vpc-0657ff5a9ff9cc17d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-015607d73c7b78c3d",
            "route_table_id": "rtb-0a5f15c4cb50d2c2d",
            "subnet_id": "subnet-0f74618082d527b83"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0146108c4ba5425fc",
            "route_table_id": "rtb-0a5f15c4cb50d2c2d",
            "subnet_id": "subnet-04fd201807da252bc"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06f2a7408e7d55d56",
            "route_table_id": "rtb-07d356840e7700e78",
            "subnet_id": "subnet-0b8d63b4c807503c9"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06430d0114f17b6cd",
            "route_table_id": "rtb-07d356840e7700e78",
            "subnet_id": "subnet-0bca642fe60c5b8d5"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-016d220c2b1b7bf2a",
            "route_table_id": "rtb-01cc536d6641acfb0",
            "subnet_id": "subnet-002c3bea0069b2b84"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d1ed96aee9d8c843",
            "route_table_id": "rtb-01cc536d6641acfb0",
            "subnet_id": "subnet-012c2c50686bffff2"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:464442795298:subnet/subnet-0f74618082d527b83",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.151.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f74618082d527b83",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "464442795298",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cropin-v2-db-ap-southeast-1a",
              "Type": "database-subnets",
              "environment": "v2",
              "owners": "cropin"
            },
            "tags_all": {
              "Name": "cropin-v2-db-ap-southeast-1a",
              "Type": "database-subnets",
              "environment": "v2",
              "owners": "cropin"
            },
            "vpc_id": "vpc-0657ff5a9ff9cc17d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:464442795298:subnet/subnet-04fd201807da252bc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.152.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04fd201807da252bc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "464442795298",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cropin-v2-db-ap-southeast-1b",
              "Type": "database-subnets",
              "environment": "v2",
              "owners": "cropin"
            },
            "tags_all": {
              "Name": "cropin-v2-db-ap-southeast-1b",
              "Type": "database-subnets",
              "environment": "v2",
              "owners": "cropin"
            },
            "vpc_id": "vpc-0657ff5a9ff9cc17d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:464442795298:subnet/subnet-0b8d63b4c807503c9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b8d63b4c807503c9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "464442795298",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cropin-v2-private-ap-southeast-1a",
              "Type": "private-subnets",
              "environment": "v2",
              "kubernetes.io/cluster/cropin-v2-eks": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "owners": "cropin"
            },
            "tags_all": {
              "Name": "cropin-v2-private-ap-southeast-1a",
              "Type": "private-subnets",
              "environment": "v2",
              "kubernetes.io/cluster/cropin-v2-eks": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "owners": "cropin"
            },
            "vpc_id": "vpc-0657ff5a9ff9cc17d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:464442795298:subnet/subnet-0bca642fe60c5b8d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bca642fe60c5b8d5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "464442795298",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cropin-v2-private-ap-southeast-1b",
              "Type": "private-subnets",
              "environment": "v2",
              "kubernetes.io/cluster/cropin-v2-eks": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "owners": "cropin"
            },
            "tags_all": {
              "Name": "cropin-v2-private-ap-southeast-1b",
              "Type": "private-subnets",
              "environment": "v2",
              "kubernetes.io/cluster/cropin-v2-eks": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "owners": "cropin"
            },
            "vpc_id": "vpc-0657ff5a9ff9cc17d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:464442795298:subnet/subnet-002c3bea0069b2b84",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-002c3bea0069b2b84",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "464442795298",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cropin-v2-public-ap-southeast-1a",
              "Type": "Public Subnets",
              "environment": "v2",
              "kubernetes.io/cluster/cropin-v2-eks": "shared",
              "kubernetes.io/role/elb": "1",
              "owners": "cropin"
            },
            "tags_all": {
              "Name": "cropin-v2-public-ap-southeast-1a",
              "Type": "Public Subnets",
              "environment": "v2",
              "kubernetes.io/cluster/cropin-v2-eks": "shared",
              "kubernetes.io/role/elb": "1",
              "owners": "cropin"
            },
            "vpc_id": "vpc-0657ff5a9ff9cc17d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:464442795298:subnet/subnet-012c2c50686bffff2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-012c2c50686bffff2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "464442795298",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cropin-v2-public-ap-southeast-1b",
              "Type": "Public Subnets",
              "environment": "v2",
              "kubernetes.io/cluster/cropin-v2-eks": "shared",
              "kubernetes.io/role/elb": "1",
              "owners": "cropin"
            },
            "tags_all": {
              "Name": "cropin-v2-public-ap-southeast-1b",
              "Type": "Public Subnets",
              "environment": "v2",
              "kubernetes.io/cluster/cropin-v2-eks": "shared",
              "kubernetes.io/role/elb": "1",
              "owners": "cropin"
            },
            "vpc_id": "vpc-0657ff5a9ff9cc17d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:464442795298:vpc/vpc-0657ff5a9ff9cc17d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06f69a94b64967b4d",
            "default_route_table_id": "rtb-0657f9e4fac86fb2b",
            "default_security_group_id": "sg-03cf57fe2ebb835bc",
            "dhcp_options_id": "dopt-0956302b0f657db05",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0657ff5a9ff9cc17d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0657f9e4fac86fb2b",
            "owner_id": "464442795298",
            "tags": {
              "Name": "cropin-v2",
              "environment": "v2",
              "owners": "cropin"
            },
            "tags_all": {
              "Name": "cropin-v2",
              "environment": "v2",
              "owners": "cropin"
            }
          }
        }
      ]
    }
  ]
}